Fixing the annoying overlap on cards in masonry grids

--- a/web/app/themes/ivoh/assets/styles/components/_cards.scss
+++ b/web/app/themes/ivoh/assets/styles/components/_cards.scss
@@ -21,10 +21,11 @@
   }
 
   .card-content {
+    color: color(black);
     padding: $padding-sm #{$beat * 4};
 
     a:not(.button) {
-      color: inherit;
+      color: color(black);
       text-decoration: none;
       @include transition(color);
       &:hover,
@@ -163,7 +164,7 @@
       @include media-sm {
         .grid-sizer,
         .card {
-          width: 50%;
+          width: calc(50% - 1px);
         }
       }
     }
@@ -171,7 +172,7 @@
       @include media-md {
         .grid-sizer,
         .card {
-          width: 50%;
+          width: calc(50% - 1px);
         }
       }
     }
@@ -179,7 +180,7 @@
       @include media-md {
         .grid-sizer,
         .card {
-          width: 33.3333%;
+          width: calc(33.3333% - .5px);
         }
       }
     }
@@ -187,7 +188,7 @@
       @include media-lg {
         .grid-sizer,
         .card {
-          width: 50%;
+          width: calc(50% - 1px);
         }
       }
     }
@@ -195,7 +196,7 @@
       @include media-lg {
         .grid-sizer,
         .card {
-          width: 33.3333%;
+          width: calc(33.3333% - .5px);
         }
       }
     }
@@ -203,7 +204,7 @@
       @include media-lg {
         .grid-sizer,
         .card {
-          width: 25%;
+          width: calc(25% - .6666px);
         }
       }
     }
